@@ -2,6 +2,8 @@
  - Lexer fixes
  - Parser fixes
  - Fixed exception in BashSearchScopes.moduleSearchScope
+ - Improved here-doc parsing
+ - Fixed parsing of string and subexpressions in arithmetic expressions
 
 2012-01-18:
  - Parser fix for "unset todo_list[$todo_id]"
